--- a/frontend/tips/19-data-driven-testing/main.mdx
+++ b/frontend/tips/19-data-driven-testing/main.mdx
@@ -24,7 +24,7 @@ There are times when you run across functionality you want to test repeatedly wi
 system behaves. We're going to go over a way to do this that will take some of the burden out of the process.
 
 Sometimes performing these tests are because you want to test the expected outcomes. Other times, because you
-want to see if the system breaks in an odd way. But, wiring up all of these permutations into a set of automated
+want to see if the system breaks in an odd way. But, wiring up all these permutations into a set of automated
 tests can be burdensome and rife with copied code, which can make it hard to maintain over time.
 
 ## A Solution
@@ -32,7 +32,7 @@ tests can be burdensome and rife with copied code, which can make it hard to mai
 Enter Data-driven Testing.
 
 By storing your desired inputs and expected outcomes in a central repository of some kind (e.g. a comma separated
-file, database, etc) you can easily wire up tests to use each of them instead of writing numerous tests and
+file, database, etc.) you can easily wire up tests to use each of them instead of writing numerous tests and
 hard-coding these values directly in your test code.
 
 
