--- a/frontend/tips/36-available-resources/main.mdx
+++ b/frontend/tips/36-available-resources/main.mdx
@@ -63,7 +63,7 @@ below in the Books section.
 
 + [Hands-On Selenium WebDriver with Java - The Book](https://www.oreilly.com/library/view/hands-on-selenium-webdriver/9781098109998/)
 
-This book is by [Boni Garcia](https://twitter.com/boni_gg) and it is a thorough resource. It outlines how to use Selenium, top-to-bottom,
+This book is by [Boni Garcia](https://twitter.com/boni_gg), and it is a thorough resource. It outlines how to use Selenium, top-to-bottom,
 using Java, and is a great resource to keep handy.
 
 ### Meetups
@@ -77,8 +77,7 @@ there's one waiting for you.
 
 + [Selenium Conf](https://seleniumconf.com/)
 
-This is the annual conference where practitioners and Selenium Core Committers gather and share knowledge. All of
-the talks are top notch, as is the hallway track. If I were to attend just one conference a year, it would be this one.
+This is the annual conference where practitioners and Selenium Core Committers gather and share knowledge. All talks are top notch, as is the hallway track. If I were to attend just one conference a year, it would be this one.
 
 + [Selenium Camp](https://seleniumcamp.com/)
 
@@ -95,7 +94,7 @@ best resources around.
 + [Selenium Meetup Talks](https://youtube.com/playlist?list=PL67l1VPxOnT4BwuKRmt_INeMd0_jtUhDt)
 
 Some Selenium Meetups take it upon themselves to record their talks and publish them afterwards. Here are some of
-them. They are a great way to see what other pockets of the community are up to (outside of the annual Selenium Conf).
+them. They are a great way to see what other pockets of the community are up to (outside the annual Selenium Conf).
 
 ### Mailing Lists
 
