--- a/frontend/tips/22-locator-strategy/_ruby.mdx
+++ b/frontend/tips/22-locator-strategy/_ruby.mdx
@@ -55,7 +55,7 @@ run do
   puts link
 end
 ```
-Note the `css: '#content a'`. The `#content` is a selector for an HTML element with `id="content"`. With it we are able to chain together the previously used `a` (separated by spaces) to grab the first link from within the content div on the page.
+Note the `css: '#content a'`. The `#content` is a selector for an HTML element with `id="content"`. With it, we are able to chain together the previously used `a` (separated by spaces) to grab the first link from within the content div on the page.
 
 ## Example 3
 
@@ -98,13 +98,13 @@ You can find a full list of CSS Selectors [here](http://www.w3schools.com/cssref
 
 ## Summary
 
-In a perfect world all pages would be written with sound markup and uniquely named bits but that's more the exception than the rule. So, you will likely find as you dig into automating various sites that things will not be as straightforward as the examples above. There are some circumstances where you have a selector dialed in but you hit issues with older browsers.
+In a perfect world all pages would be written with sound markup and uniquely named bits but that's more the exception than the rule. So, you will likely find as you dig into automating various sites that things will not be as straightforward as the examples above. There are some circumstances where you have a selector dialed in, but you hit issues with older browsers.
 
 As far as finding CSS Selectors, the simplest way to find them is to inspect the elements on a page. The best way to do this is from within your web browser. Fortunately popular browsers of today come pre-loaded with development tools that make this simple to accomplish.
 
-When viewing the page right click on the element you want to interact with and click __Inspect Element__. This will bring up a small window with all of the HTML for the page but zoomed into your selection highlighted. From here you can see if there are unique attributes you can work with (e.g. `id`, `class`, etc). At the bottom of the window a set of selectors will be listed showing you the selector for your selection and a heirarchy of the selectors on the page that lead up to your selection.
+When viewing the page, right click on the element you want to interact with and click __Inspect Element__. This will bring up a small window with all the HTML for the page but zoomed into your selection highlighted. From here you can see if there are unique attributes you can work with (e.g. `id`, `class`, etc.). At the bottom of the window a set of selectors will be listed showing you the selector for your selection and a hierarchy of the selectors on the page that lead up to your selection.
 
-From here you should able to construct a CSS Selector to use in a test.
+From here you should be able to construct a CSS Selector to use in a test.
 
 To that end, stay tuned for future tips where we'll cover more advanced CSS Selector techniques and strategies for dealing with older browsers.
 
