--- a/frontend/tips/24-rest-apis/_ruby.mdx
+++ b/frontend/tips/24-rest-apis/_ruby.mdx
@@ -18,7 +18,7 @@ This call takes a JSON request body, and creates a user.
 }
 ```
 
-That tells us we will have to send an `HTTP POST` request to the URL `/v1/create-user`, with a JSON object body that has valid values for all of the fields shown. If this all sounds scary, it might help to know that this is more-or-less what your browser does when you submit a form. In this case though, we are going to do it sans-browser.
+That tells us we will have to send an `HTTP POST` request to the URL `/v1/create-user`, with a JSON object body that has valid values for all the fields shown. If this all sounds scary, it might help to know that this is more-or-less what your browser does when you submit a form. In this case though, we are going to do it sans-browser.
 
 The following module has a `create_test_user` method which we will incorporate into our test setups. It contains some helpful inline comments that describe each of the actions being taken.
 
@@ -132,7 +132,7 @@ Indeed, there are many great reasons to consider pure REST API tests to suppleme
 * Simpler execution architecture.
 * More encouraging of testable design in the application
 
-REST API tests are very appropriate for exercising the business logic that powers an application. Of course they leave a lot of important parts of the application untested including Javascript within the website, thus they should never be considered a complete Selenium replacement.
+REST API tests are very appropriate for exercising the business logic that powers an application. Of course, they leave a lot of important parts of the application untested including Javascript within the website, thus they should never be considered a complete Selenium replacement.
 
 __Note: Given the ever increasing important of mobile applications, I believe special mention concerning the testing of a mobile application is important here. There are several Selenium like tools for mobile testing out there, but the landscape is still quite immature. Fortunately, the majority of most mobile applications are in fact backed by a REST API. Pure REST API testing should be considered an important component of any test plan for every mobile application!__
 
