--- a/frontend/tips/3-work-with-frames/_javascript.mdx
+++ b/frontend/tips/3-work-with-frames/_javascript.mdx
@@ -14,7 +14,7 @@ browser with Selenium (e.g., `const {Builder, By} = require("selenium-webdriver"
 After creating a `describe` to group our tests (e.g., `describe("Frame Test")...`), lines 5 to 13 are setting up and
 tearing down the browser instance.
 
-The `beforeEach` method, will execute before each test. In it we are launching a new instance of Firefox with
+The `beforeEach` method, will execute before each test. In it, we are launching a new instance of Firefox with
 Selenium and storing it in a class variable that we'll use throughout all tests. After our test executes the second
 method, `afterEach`, will execute. This calls `driver.quit()` which ends the session by closing the browser instance.
 
@@ -38,7 +38,7 @@ Here is a more likely example you'll run into -- working with a
 <abbr title="What You See Is What You Get">WYSIWYG</abbr> Editor like
 [TinyMCE](https://www.tinymce.com/). You can see the page we're testing [here](https://the-internet.herokuapp.com/tinymce).
 
-Keep in mind that if we need to access a part of the page outside of the frame we are currently in we'll need to
+Keep in mind that if we need to access a part of the page outside the frame we are currently in we'll need to
 switch to it. Thankfully Selenium has method that enables us to quickly jump back to the top level of the page
 -- `switchTo.defaultContent()`.
 
