--- a/frontend/tips/40-disabled-element/_ruby.mdx
+++ b/frontend/tips/40-disabled-element/_ruby.mdx
@@ -38,7 +38,7 @@ run do
 end
 ```
 
-After loading the page, we find all of the elements that have an option tag (which are all of the items in the dropdown list). This will return an array, so we iterate over the collection and find the item we want based on a text comparison.
+After loading the page, we find all the elements that have an option tag (which are all the items in the dropdown list). This will return an array, so we iterate over the collection and find the item we want based on a text comparison.
 
 Once we have the element we want we see if it's enabled (with `.enabled?`) and assert based on the response.
 
@@ -54,6 +54,6 @@ If you save this file and run it (e.g., `ruby dropdown_disabled.rb` from the com
 
 ## Summary
 
-Hopefully this tip has helped make the task of seeing whether or not an element is enabled or disabled more approachable.
+Hopefully this tip has helped make the task of seeing whether an element is enabled or disabled more approachable.
 
 Happy Testing!
