--- a/frontend/tips/56-retry-failed-tests/_ruby.mdx
+++ b/frontend/tips/56-retry-failed-tests/_ruby.mdx
@@ -60,7 +60,7 @@ After that we have access to the helper method we want (e.g., `dump_failures`). 
 detailed information about each failed test through the `failed_examples` accessor.
 
 After checking to see if there are any failed examples, we create a new uniquely named file (leveraging the 
-environment variable created by our parallel executor), iterate through all of the failed examples, and store a 
+environment variable created by our parallel executor), iterate through all failed examples, and store a 
 properly formatted retry execution command with the name of the failed test.
 
 To use this formatter we'll need to specify it at run-time, and to leverage a retry action we'll need to wrap our 
@@ -117,7 +117,7 @@ up a list of failed tests from the *.failure files and deleting them when we're 
 
 The Rake task is where we tie everything together.
 
-In it we make the number of concurrent processes configurable through the use of an optional run-time argument. 
+In it, we make the number of concurrent processes configurable through the use of an optional run-time argument. 
 We then call `run` (passing in the argument) which executes the full suite. After the suite completes, 
 we perform a check against the exit code to see if there were any failures. If there were, then we call 
 `rerun` (along with the argument for number of processes),  and then call `cleanup` to remove the failure files.
