Fixing typo in tip 2 for Selenide

--- a/frontend/tips/2-download-a-file/_selenide.mdx
+++ b/frontend/tips/2-download-a-file/_selenide.mdx
@@ -39,7 +39,7 @@ Selenide sample for downloading files is straightforward because Selenide does a
 * clicks a web element
 * waits until the file arises in the downloads folder
 
-In addition, Selenide has more [ways to download files](https://selenide.org/javadoc/current/com/codeborne/selenide/FileDownloadMode.html:
+In addition, Selenide has more [ways to download files](https://selenide.org/javadoc/current/com/codeborne/selenide/FileDownloadMode.html):
   * `HTTPGET` (default one)
   * `FOLDER`
   * `CDP`
