--- a/frontend/tips/31-archives/main.mdx
+++ b/frontend/tips/31-archives/main.mdx
@@ -31,7 +31,7 @@ within the tip and when viewing all tips on the archive page), and will return a
 
 ## Example
 
-If you are viewing [Tip 7](/docs) and click on the category (e.g. 'Patterns').
+If you are viewing [Tip 7](/tips/7-use-a-page-object) and click on the category (e.g. 'Patterns').
 
 ![tip 7](./../images/in_tip.png)
 
