Add tip "6: How to open new window/tab" in Selenide

--- a/frontend/tips/6-open-new-window/main.mdx
+++ b/frontend/tips/6-open-new-window/main.mdx
@@ -43,6 +43,7 @@ import DisplayTips from '@site/src/components/displayTips';
     {label: 'Java', value: 'java'},
     {label: 'JavaScript', value: 'javascript'},
     {label: 'Ruby', value: 'ruby'},
+    {label: 'Selenide', value: 'selenide'},
 ]}/>
 
 ## Expected Behavior
